--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "contentlayer": "^0.3.4",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
+    "gray-matter": "^4.0.3",
+    "next": "^13.4.16",
+    "next-contentlayer": "^0.3.4",
     "postcss": "8.4.27",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
